Optimize print layout: 3 columns for Standard Portrait

--- a/style.css
+++ b/style.css
@@ -482,9 +482,19 @@
       width: 210mm;
     }
   }
+  .print\:grid-cols-1 {
+    @media print {
+      grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+  }
   .print\:grid-cols-2 {
     @media print {
       grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+  .print\:grid-cols-3 {
+    @media print {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
   .print\:gap-0 {
